# aquant-studio-mvp

./: .gitignore  PROJECT_OVERVIEW.md  README.md  index.html  prd-scope-update-a-share.md  quant-model-platform-prd.md
audit_module/: audit-stage-11-delivery.md  audit_manifest.py
automation_controls_module/: limited-auto-stage-9-delivery.md  limited_auto_guard.py
backtest_module/: backtest-engine-delivery.md  backtest_engine.py
broker_adapter_module/: account_sync.py  broker-adapter-stage-5-delivery.md  broker_adapter.py  read-only-account-stage-6-delivery.md  read_only_broker_adapter.py
web_app/backend/: .env.example  pyproject.toml
web_app/backend/app/: __init__.py  main.py
web_app/backend/app/api/v1/: router.py
web_app/backend/app/api/v1/routes/: auth.py  backtests.py  database.py  market.py  security.py  strategies.py  system.py  templates.py
web_app/backend/app/core/: config.py
web_app/backend/app/db/: init_db.py  session.py
web_app/backend/app/models/: __init__.py  audit.py  backtest.py  market.py  strategy.py  template.py  user.py
web_app/backend/app/schemas/: auth.py  backtest.py  market.py  security.py  strategy.py  system.py
web_app/backend/app/services/: __init__.py  auth_service.py  backtest_service.py  database_backup_service.py  database_service.py  json_utils.py  legacy_paths.py  market_data_source_service.py  market_service.py  strategy_repository.py  strategy_service.py  template_service.py  trading_calendar_service.py
web_app/backend/app/tasks/: __init__.py  database_maintenance.py
web_app/backend/tests/: test_app.py
(+255 files in other folders)
